# skybank_widget

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: config.py  external_api.py  main.py  utils.py  utils_eventspage.py  utils_mainpage.py  views.py
tests/: conftest.py  test_currency_rates.py  test_filter_by_current_month.py  test_filter_operations_by_period.py  test_get_cards_info.py  test_get_intraday_data.py  test_get_main_expenses.py  test_get_main_income.py  test_get_stocks_prices.py  test_get_time_segment.py  test_get_top_5_transactions.py  test_get_transfers_cash.py  test_greetings.py  test_is_valid_datetime_format.py  test_load_operations.py  test_settings.py  test_start_of_month.py
