[tool.poetry]
name = "skypro-widget"
version = "0.1.0"
description = ""
authors = ["Georgii Ovechkin <goqwertys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
isort = "^5.13.2"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
